Add partial game logic, player attack logic, separate to own module

--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,10 @@ body {
     cursor: pointer;
 }
 
+.cell:hover {
+    border: 1px dashed slategray;
+}
+
 /* Empty cell style */
 .empty {
     background-color: #fff;
