--- a/src/style.css
+++ b/src/style.css
@@ -6,15 +6,54 @@ body {
     margin: 0;
 }
 
+.game-space {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .game-boards {
     display: flex;
+    padding: 10px;
 }
 
 .game-board {
     display: grid;
     grid-template-columns: repeat(10, 40px);
     grid-gap: 4px;
-    margin-right: 50px;
+    margin-left: 25px;
+    margin-right: 25px;
+}
+
+#player-pieces {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.game-pieces p {
+    padding: 0;
+    margin-bottom: 8px;
+}
+
+.game-piece {
+    display: flex;
+}
+
+.player-piece {
+    justify-content: flex-end;
+}
+
+.dummy-cell {
+    width: 40px;
+    height: 40px;
+    border: 1px solid #ccc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+    font-weight: bold;
+    cursor: pointer;
 }
 
 .cell {
@@ -30,7 +69,7 @@ body {
 }
 
 .cell:hover {
-    border: 1px dashed slategray;
+    border: 1px dashed black;
 }
 
 /* Empty cell style */
