--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
+    background-color: #F0F8FF;
 }
 
 .game-space {
@@ -34,6 +35,7 @@ body {
 .game-pieces p {
     padding: 0;
     margin-bottom: 8px;
+    font-family: 'Courier New', monospace;
 }
 
 .game-piece {
@@ -44,18 +46,7 @@ body {
     justify-content: flex-end;
 }
 
-.dummy-cell {
-    width: 40px;
-    height: 40px;
-    border: 1px solid #ccc;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 12px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
+.dummy-cell,
 .cell {
     width: 40px;
     height: 40px;
@@ -68,12 +59,13 @@ body {
     cursor: pointer;
 }
 
-.cell:hover {
-    border: 1px dashed black;
+.computer-cell:hover {
+    /*border: 1px dashed black;*/
+    outline: 2px dashed red;
 }
 
 .empty {
-    background-color: #fff;
+    background-color: #00CED1;
 }
 
 .ship {
@@ -82,14 +74,16 @@ body {
 }
 
 .miss {
-    background-color: #3498db;
+    background-color: #008080;
     color: #fff;
+    box-shadow: inset 0 0 10px white;
 }
 
 .hit {
     background-color: #555;
     color: #fff;
     outline: 2px solid #e74c3c;
+    box-shadow: inset 0 0 10px #e74c3c;
 }
 
 #new-game-button {
@@ -97,6 +91,17 @@ body {
     padding: 10px;
     font-size: 16px;
     cursor: pointer;
+    background-color: #555; /* Dark gray like ships */
+    color: #fff; /* White text */
+    border: none;
+    border-radius: 5px;
+    text-transform: uppercase; /* Uppercase text */
+    letter-spacing: 1px; /* Slight spacing between letters */
+    transition: background-color 0.3s ease; /* Smooth color transition on hover */
+}
+
+#new-game-button:hover {
+    background-color: #333; /* Slightly darker on hover */
 }
 
 .placement-preview-valid {
@@ -127,3 +132,8 @@ body {
   #message-text {
     padding: 10px;
   }
+
+  #footer {
+    margin-top: auto;
+    font-family: monospace;
+}
